# expert-dollop

./: .env.test  .gitignore  0.txt  Dockerfile  README.md  cloud_storage.dockerfile  cloudbuild.yaml  conftest.py  docker-compose.ci.yml  docker-compose.firestore.yml  docker-compose.mongodb.yml  docker-compose.postgres.yml  docker-compose.yml  firebase.dockerfile  predykt.dev.ext  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: 2c47a3dd1b88_intial_database.py  3ca73ea7f05a_add_project_definition_plugin.py  e4501fdb5003_table_setup.py
dev/: clean_db.py  init_db.py  simple_project.py  tables.py
expert_dollup/: firestore.py  main.py
expert_dollup/app/: app.py  jwt_auth.py  mappings.py  settings.py
expert_dollup/app/controllers/: __init__.py  formula.py  formulas_controller.py  import_set.py  measure_units_controller.py  translation.py  translations_controller.py
expert_dollup/app/dtos/: __init__.py  datasheet_definition_dto.py  datasheet_definition_element_dto.py  datasheet_definition_label_collection_dto.py  datasheet_definition_label_dto.py  datasheet_dto.py  datasheet_element_dto.py  distributable_dto.py  dynamic_primitive.py  formula_dto.py  measure_unit_dto.py  organisation_dto.py  organization_dto.py  page_dto.py  project_container_dto.py  project_container_meta_dto.py  project_container_tree_dto.py  project_definition_container_dto.py  project_definition_dto.py  project_definition_function_dto.py  project_definition_node_dto.py  project_definition_node_tree_dto.py  project_definition_package_dto.py  project_definition_struct_dto.py  project_dto.py  project_node_dto.py  project_node_meta_dto.py  project_node_tree_dto.py  report_definition_dto.py  report_dto.py  report_row_dto.py  ressource_dto.py  translation_dto.py  translation_page_dto.py  user_dto.py
expert_dollup/app/handlers/: __init__.py  import_ressource_handler.py
expert_dollup/app/middlewares/: __init__.py  container_middleware.py  error_middleware.py  logger_middleware.py
expert_dollup/app/modules/: __init__.py  app.py  builders.py  container_builder.py  core.py  database.py  definitions.py  error_handler.py  externals.py  factories.py  handlers.py  infras.py  logger.py  middlewares.py  projection.py  providers.py  services.py  shared_services.py  usecases.py  validators.py
expert_dollup/app/schemas/: __init__.py  aggregate_collection_schema.py  aggregate_schema.py  command_order_schema.py  datasheet_definition_element_schema.py  datasheet_definition_schema.py  datasheet_element_schema.py  datasheet_schema.py  datsheet_schema.py  distributable_schema.py  formulas.py  formulas_schema.py  graphql_context.py  measure_units_schema.py  project_definition_node_schema.py  project_definition_schema.py  project_details_schema.py  project_node_meta.py  project_node_meta_schema.py  project_node_schema.py  project_schema.py  report_definition_schema.py  report_schema.py  schema.graphql  translation_schema.py  types.py  user_schema.py  value_type_schema.py
expert_dollup/core/: object_storage.py
expert_dollup/infra/: expert_dollup_db.py  expert_dollup_storage.py  json_schema.py  mappings.py  path_transform.py  ressource_engine.py
images/: docker-compose.mongodb.yml
migrations/: m0001_base.py
predykt/: main.py
predykt/app/: app.py  mappings.py
predykt/dev/: init_db.py
predykt/infra/: json_schema.py  mappings.py  path_transform.py  predykt_db.py
tests/: conftest.py  e2e_project_def_test.py  e2e_test.py  utils.py
tests/e2e/: api_test.py  datasheet_definition_test.py  datasheet_test.py  datsheet_test.py  formula_test.py  project_def_test.py  project_test.py  project_trigger_test.py  reports_test.py  translation_test.py
tests/fixtures/: __init__.py  factories_domain.py  factories_dto.py  fake_db_helpers.py  flow_runner.py  helpers.py  integrated_test_client.py  mapping_helpers.py  mock_interface_utils.py  object_dump_helpers.py  rest_cursors.py  simple_project_definition.json
tests/integration/: formula_node_fetching_test.py  ressource_engine.py  ressource_engine_test.py
(+530 files in other folders)
