[tool.poetry]
name = "expert_dollup"
version = "0.1.0"
description = ""
authors = ["gabriel <gabcpp@outlook.fr>"]

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.61.2"
injector = "^0.18.4"
python-dotenv = "^0.15.0"
structlog = "^20.1.0"
jsonschema = "^3.2.0"
pyhumps = "^1.6.1"
PyJWT = "^2.1.0"
cryptography = ">=2.6"
python-multipart = "^0.0.5"
mypy-extensions = "^0.4.3"
databases = { extras = ["postgresql"], version = "^0.4.1", optional = true }
sqlalchemy = { version = "^1.3.20", optional = true }
google-cloud-firestore = {version = "^2.3.4", optional = true}
google-cloud-storage = "^1.43.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
ariadne = "^0.14.0"

[tool.poetry.extras]
postgres = ["databases", "sqlalchemy"]
firestore = ["google-cloud-firestore"]

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
faker = "^5.0.1"
async_asgi_testclient = "^1.4.4"
factory-boy = "^3.1.0"
invoke = "^1.5.0"
deepdiff = "^5.5.0"
alembic = "^1.4.3"
psycopg2-binary = "^2.9.1"
mypy = "^0.930"
pytest-snapshot = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
